[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/layout.png" type="Texture" id=1]
[ext_resource path="res://sprites/light.png" type="Texture" id=2]
[ext_resource path="res://sounds/Ampumis 1 Cropped.mp3" type="AudioStream" id=3]
[ext_resource path="res://scripts/se_enemy.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 10.0997 )

[sub_resource type="RectangleShape2D" id=2]

[node name="se_enemy" type="KinematicBody2D"]
scale = Vector2( 5, 5 )
collision_layer = 16
script = ExtResource( 4 )

[node name="sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.27865, 1.00871e-06 )
rotation = 1.5708
scale = Vector2( 1.25909, 2.61689 )
shape = SubResource( 1 )

[node name="shootPoint" type="Position2D" parent="."]

[node name="Area2d" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2d"]
modulate = Color( 0.529412, 1, 0.431373, 1 )
scale = Vector2( -2.74326, 1.48648 )
shape = SubResource( 2 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
process_priority = 1
path_desired_distance = 50.0
target_desired_distance = 50.0
path_max_distance = 10.0

[node name="shootPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="newTargetPathTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 4.6, 5.08 )
texture = ExtResource( 2 )
texture_scale = 0.24
color = Color( 0.94902, 0.662745, 0.662745, 1 )
energy = 0.66
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 4

[connection signal="body_entered" from="Area2d" to="." method="_on_Area2d_body_entered"]
[connection signal="timeout" from="newTargetPathTimer" to="." method="_on_TargetPathTimer_timeout"]
